--- a/tensor_slicing_test.ipynb
+++ b/tensor_slicing_test.ipynb
@@ -34,6 +34,51 @@
     "# idx = (tensor[tensor[:,3].type(torch.int8)==1, :3])\n",
     "# print(idx)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 1,  5,  9, 10])\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = torch.tensor([[1,2,3],[4,5,6],[7,8,9],[10,11,12]])\n",
+    "indices = torch.tensor([0,1,2,0])\n",
+    "# expected output [1,5,9,10]\n",
+    "output = torch.tensor([input[i, indices[i]] for i in range(indices.shape[0])])\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ True,  True, False, False, False],\n",
+      "        [False, False,  True,  True,  True],\n",
+      "        [False,  True, False, False, False],\n",
+      "        [False, False, False, False, False]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = torch.tensor([[1,1,2,2,3],[2,2,3,3,3],[1,2,3,3,3],[1,1,3,3,3]])\n",
+    "mask_vals = torch.tensor([1, 3, 2, 2])\n",
+    "# expected output [[T,T,F,F,F],[F,F,T,T,T],[F,T,F,F,F],[F,F,F,F,F]]\n",
+    "mask = mask_vals.unsqueeze(1).expand(-1, input.shape[1])\n",
+    "print(input==mask)"
+   ]
   }
  ],
  "metadata": {
