--- a/tensor_slicing_test.ipynb
+++ b/tensor_slicing_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,8 +76,37 @@
     "input = torch.tensor([[1,1,2,2,3],[2,2,3,3,3],[1,2,3,3,3],[1,1,3,3,3]])\n",
     "mask_vals = torch.tensor([1, 3, 2, 2])\n",
     "# expected output [[T,T,F,F,F],[F,F,T,T,T],[F,T,F,F,F],[F,F,F,F,F]]\n",
-    "mask = mask_vals.unsqueeze(1).expand(-1, input.shape[1])\n",
-    "print(input==mask)"
+    "mask = (input==(mask_vals.unsqueeze(1).expand(-1, input.shape[1])))\n",
+    "print(mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[2, 3, 4, 2, 3, 4],\n",
+      "        [2, 3, 4, 4, 2, 3]])\n",
+      "tensor([[0., 0., 1., 0., 0., 1.],\n",
+      "        [0., 0., 1., 1., 0., 0.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# time stamps: max=3, min=1\n",
+    "max_ts = torch.tensor([3, 3])\n",
+    "\n",
+    "original_ts = torch.tensor([[1,2,3,1,2,3],[1,2,3,3,1,2]])\n",
+    "steering = torch.tensor([1,1,1,1,1,1])\n",
+    "target_ts = original_ts+steering.expand(original_ts.shape[0], -1)\n",
+    "print(target_ts)\n",
+    "\n",
+    "locs_over = torch.where(target_ts>3, 1.0, 0.0)\n",
+    "print(locs_over)"
    ]
   }
  ],
