--- a/python_coding.ipynb
+++ b/python_coding.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -220,6 +220,7 @@
     }
    ],
    "source": [
+    "# assert\n",
     "a=3\n",
     "assert(a>1)\n",
     "print('assert(a) ok')\n",
@@ -601,6 +602,487 @@
     "a = [1,2]\n",
     "b = [3,4]\n",
     "res = [i for i in zip(a,b)]\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max grade: 100%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# substitute string\n",
+    "import re\n",
+    "a = \"Max grade: 98%\"\n",
+    "ret = re.sub(\"\\d+\", \"100\", a)\n",
+    "print(ret)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'hello' b'\\xe5\\x91\\xb5\\xe5\\x91\\xb5'\n",
+      "<class 'bytes'> <class 'bytes'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# string to bytes\n",
+    "a = b\"hello\"\n",
+    "b = \"呵呵\".encode(\"utf-8\")\n",
+    "\n",
+    "print(a,b)\n",
+    "print(type(a), type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# adding lists are equivalent to extend\n",
+    "a = [1,2,3]\n",
+    "b = [4,5,6]\n",
+    "res = a+b\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 6, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sort a list w/o sort() function\n",
+    "l = [2,3,5,4,9,6]\n",
+    "new_list = []\n",
+    "def get_min(l):\n",
+    "    a = min(l)\n",
+    "    l.remove(a)\n",
+    "    new_list.append(a)\n",
+    "    if len(l)>0:\n",
+    "        get_min(l)\n",
+    "    return new_list\n",
+    "\n",
+    "new_list = get_min(l)\n",
+    "print(new_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'one': 1}\n",
+      "{'one': 1, 'two': 2}\n",
+      "{'three': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dictionary\n",
+    "def fn(k,v,dic={}):\n",
+    "    dic[k]=v\n",
+    "    print(dic)\n",
+    "fn(\"one\", 1)\n",
+    "fn(\"two\", 2)\n",
+    "fn(\"three\", 3, {})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use pop() and del() to remove dictionary entry\n",
+    "dic = {\"name\":\"zs\", \"age\":18}\n",
+    "dic.pop(\"name\")\n",
+    "print(dict)\n",
+    "dic = {\"name\":\"zs\", \"age\":18}\n",
+    "del dic[\"name\"]\n",
+    "print(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 8, 8, 9, -2, -4, -4, -5, -20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sorting with lambda keys?\n",
+    "foo = [-5, 8, 0, 4, 9, -4, -20, -2, 8, 2, -4]\n",
+    "a = sorted(foo, key=lambda x:(x<0, abs(x)))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n__init__    when object inits\\n__new__     when object start\\n__str__     for print(obj)\\n__del__     when object gets deleted\\n'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# magic methods\n",
+    "\"\"\"\n",
+    "__init__    when object inits\n",
+    "__new__     when object start\n",
+    "__str__     for print(obj)\n",
+    "__del__     when object gets deleted\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'generator'>\n",
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# generator\n",
+    "a = (i for i in range(3))\n",
+    "print(type(a))\n",
+    "for num in a:\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hehe\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove leading and trailing symbols\n",
+    "a = \",hehe,,,\"\n",
+    "print(a.strip(','))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('ll', 54), ('df', 23), ('zs', 19), ('wa', 17)]\n",
+      "[('df', 23), ('ll', 54), ('wa', 17), ('zs', 19)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sorting tuples using lambda function\n",
+    "foo=[(\"zs\", 19), (\"ll\", 54), (\"wa\", 17), (\"df\",23)]\n",
+    "a = sorted(foo, key=lambda x:x[1], reverse=True)\n",
+    "print(a)\n",
+    "b = sorted(foo, key=lambda x:x[0])\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "{'a': 7, 'b': 4, 'c': 9, 'd': 7} <class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "# iterator\n",
+    "td_list = [i for i in range(10)]\n",
+    "print(td_list)\n",
+    "\n",
+    "# generator\n",
+    "ge_list = (i for i in range(10))\n",
+    "for v in ge_list:\n",
+    "    print(v)\n",
+    "\n",
+    "# dictionary\n",
+    "dic = {k:random.randint(4,9) for k in [\"a\",\"b\",\"c\",\"d\"]}\n",
+    "print(dic, type(dic))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'ab', 'abc', 'djkj']\n",
+      "['a', 'ab', 'abc', 'djkj']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sort string by length\n",
+    "s = [\"ab\", \"abc\", \"a\", \"djkj\"]\n",
+    "b = sorted(s, key=lambda x:len(x))\n",
+    "print(b)\n",
+    "s.sort(key=len)\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "# recursive sum\n",
+    "def get_sum(num):\n",
+    "    if num>=1:\n",
+    "        res = num+get_sum(num-1)\n",
+    "    else:\n",
+    "        res = 0\n",
+    "\n",
+    "    return res\n",
+    "\n",
+    "res = get_sum(10)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"name\": \"zs\"} <class 'str'>\n",
+      "{'name': 'zs'} <class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# json\n",
+    "import json\n",
+    "dic = {\"name\":\"zs\"}\n",
+    "res = json.dumps(dic)\n",
+    "print(res, type(res))\n",
+    "ret = json.loads(res)\n",
+    "print(ret, type(ret))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count a word\n",
+    "str = \"tom is living in America with tom and tom\"\n",
+    "res = str.count(\"tom\")\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HHHUUU\n",
+      "hhhuuu\n"
+     ]
+    }
+   ],
+   "source": [
+    "# uppercase and lower case\n",
+    "str = \"HHHuuu\"\n",
+    "print(str.upper())\n",
+    "print(str.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "helloworldhaha\n",
+      "helloworldhaha\n"
+     ]
+    }
+   ],
+   "source": [
+    "# removing spaces\n",
+    "str = \"hello world ha ha \"\n",
+    "res1=str.replace(\" \",\"\")\n",
+    "print(res1)\n",
+    "\n",
+    "list = str.split(\" \")\n",
+    "res2 = \"\".join(list)\n",
+    "print(res2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62.101106758355776\n",
+      "47\n",
+      "58\n"
+     ]
+    }
+   ],
+   "source": [
+    "# generate random number within 0-100\n",
+    "import random\n",
+    "res1 = 100*random.random()\n",
+    "res2 = random.choice(range(0,101))\n",
+    "res3 = random.randint(1, 100)\n",
+    "print(res1)\n",
+    "print(res2)\n",
+    "print(res3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'n/a', 'c', 'n/a', 'n/a', 'd', 'n/a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# string filler\n",
+    "a = [\"a\", \"b\", \"\", \"c\", \"\", \"\", \"d\",\"\"]\n",
+    "res = list(map(lambda x:\"n/a\" if x==\"\" else x, a))\n",
     "print(res)"
    ]
   },
