--- a/test_gmlp.ipynb
+++ b/test_gmlp.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,26 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[[-0.2462, -0.3028,  0.0592,  ...,  0.4625,  0.1959, -0.2689],\n",
-      "         [ 0.2160,  0.1295,  0.2143,  ..., -0.1680, -0.3510, -0.6935],\n",
-      "         [-0.6796, -0.7663,  1.2161,  ...,  0.4081, -0.4737, -0.0968],\n",
-      "         ...,\n",
-      "         [-0.5456,  0.0677, -0.1205,  ..., -0.3520,  1.2341,  0.6346],\n",
-      "         [ 0.4872,  1.3345, -1.2313,  ..., -0.3325,  0.6884, -0.1975],\n",
-      "         [ 0.3680,  0.4513, -0.0881,  ...,  0.0570, -0.3023, -0.1687]]],\n",
-      "       grad_fn=<ViewBackward0>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = torch.randint(0, 20000, (1, 256))\n",
+    "x = torch.randint(0, 20000, (1, 256))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "logits = model(x) # (1, 256, 20000)\n",
     "print(logits)"
    ]
